# INTERNET1.5

./: README.md
docs/: technical-specifications-security-economics.md
internet-15-backend/: Cargo.toml  testfile.txt
internet-15-backend/src/: db.rs  main.rs  routes.rs  schema.rs
internet-15-backend/src/storage/: api.rs  p2p.rs  storage.rs
internet-15-backend/src/utils/: config.rs
sdk/internet-1.5-sdk/: package-lock.json  package.json
sdk/internet-1.5-sdk/src/: auth.ts  blockchain.ts  config.ts  global.d.ts  index.ts  storage.ts
sdk/internet-1.5-sdk/tests/: storage.test.ts
