[package]
name = "internet-15-backend" 
version = "0.1.0"
edition = "2021"  # Change from 2024 to 2021

[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
warp = "0.3"
actix-web = "4"
dotenv = "0.15"
libp2p = "0.52"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres"] }